--- a/cti.nodejs/package.json
+++ b/cti.nodejs/package.json
@@ -4,7 +4,8 @@
   "description": "Copper PDF CTI Driver for Node.js",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "jsdoc -c jsdoc.json"
   },
   "keywords": [
     "copper",
@@ -16,5 +17,8 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">=14.0.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.5"
   }
 }
