TypeScriptにしました

--- a/cti.nodejs/.gitignore
+++ b/cti.nodejs/.gitignore
@@ -1,6 +1,20 @@
+# Dependencies
 node_modules/
-output/
+
+# Build output
+dist/
+
+# Generated documentation
 docs/
-*.log
-.DS_Store
+
+# IDE
+.idea/
 .vscode/
+
+# Test outputs
+output/
+*.pdf
+
+# Debug files
+*.log
+*.tmp
